--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <hr>
         <h2><u>Education</u></h2>
         <ul>
-            <li>currently pursuing a Bachelor of Technology (B.Tech) at Kalinga Institute of Industrial Technology (KIIT)</li>
+            <li>Currently pursuing a Bachelor of Technology (B.Tech) at Kalinga Institute of Industrial Technology (KIIT)</li>
             <li>Completed my Higher Secondary Education from ODM PUBLIC SCHOOL, BHUBANESHWAR</li>
             <li>Successfully completed Class X (ICSE) from LOYOLA SCHOOL,BHUBANESHWAR.</li>
         </ul>
